--- a/park.css
+++ b/park.css
@@ -45,13 +45,25 @@ main {
 }
 
 footer {
-    position: fixed;
+    position: fixed ;
     left: 0;
     bottom: 0;
     width: 100%;
+    
+    color: #314837; 
+    text-align: center;
+    
+}
+
+
+.footer { 
+    position: absolute; 
+    bottom: 0; 
+    left: 0; 
+    z-index: 10;
+    width: 100%;
     background-color: #bf9f4c; 
     color: #314837; 
-    padding: 2px;
     text-align: center;
 }
 
@@ -106,3 +118,4 @@ ul li::before {
     content: "\1F697";
     padding-right: 8px; 
 }
+
